...
  return (
    <View style={styles.container}>
      {error ? (
        <Text>{error}</Text>
      ) : (
        <FlatList
          testID="commitList"
          data={commits}
          renderItem={({ item }) => <Commit item={item} />}
          keyExtractor={item => item.sha}
          onRefresh={fetchData}
          refreshing={isLoading}
          // onEndReached={fetchMore}
...
